--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -97,7 +97,11 @@
 {% endblock %}
 
 {% block content %}
+    {% if intervention.is_half_done and not intervention.is_done %}
+        <button class="btn btn-danger btn-sm annuler-intervention" data-id="{{ intervention.id }}">Annuler</button>
+    {% endif %}
     <h2>Détails de l'intervention pour la doléance {{ intervention.doleance.ndi }}</h2>
+    <p>{{ intervention.doleance.panne_declarer }}</p>
 
     <div class="row">
         <div class="col-md-4">
@@ -152,9 +156,12 @@
     </ul>
 
     {% if not intervention.is_done %}
+        {% csrf_token %}
         {% if not intervention.top_debut %}
-            <a href="{% url 'gmao:commencer_travail' intervention.id %}" class="btn btn-primary">Commencer le
-                travail</a>
+            <a href="{% url 'gmao:commencer_intervention' intervention.id %}"
+               class="btn btn-primary btn-sm commencer-intervention" data-id="{{ intervention.id }}">
+                Commencer le travail
+            </a>
         {% elif not intervention.top_terminer %}
             <button id="openInterventionForm" class="btn btn-success">Terminer le travail</button>
         {% endif %}
@@ -166,7 +173,14 @@
             <span class="close">&times;</span>
             <h3>Fiche d'Intervention</h3>
             <form id="interventionForm">
+                <input type="hidden" id="intervention-id-input" name="intervention_id" value="{{ intervention.id }}">
                 {% csrf_token %}
+                <div class="form-group">
+                    <label for="numero_fiche">Numéro de fiche :</label>
+                    <input type="text" id="numero_fiche" name="numero_fiche"
+                           maxlength="5" pattern="\d{1,5}" required
+                    >
+                </div>
                 <div class="form-group">
                     <label for="ndi">NDI :</label>
                     <input type="text" id="ndi" name="ndi" value="{{ intervention.doleance.ndi }}" readonly>
@@ -199,8 +213,8 @@
                     <textarea id="description_panne" name="description_panne" rows="3" required></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="travaux_effectues">Travaux effectués :</label>
-                    <textarea id="travaux_effectues" name="travaux_effectues" rows="3" required></textarea>
+                    <label for="resolution">Résolution:</label>
+                    <textarea id="resolution" name="resolution" rows="3" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="observations">Observations :</label>
@@ -210,6 +224,15 @@
                     <label for="pieces_changees">Pièces changées :</label>
                     <textarea id="pieces_changees" name="pieces_changees" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label>Statut final de l'intervention :</label>
+                    <label for="statut-final"></label><select id="statut-final" name="statut_final" required>
+                    <option value="">Choisissez un statut</option>
+                    <option value="TER">Terminé (TER)</option>
+                    <option value="ATP">Attente Pièces (ATP)</option>
+                    <option value="ATD">Attente Décision (ATD)</option>
+                </select>
+                </div>
                 <button type="submit" class="btn btn-success">Terminer l'intervention</button>
             </form>
         </div>
@@ -217,8 +240,82 @@
 {% endblock %}
 
 {% block extra_js %}
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
     <script>
+        function commencerIntervention(interventionId) {
+            console.log("Début de commencerIntervention", interventionId);
+            let kilometrage = prompt("Veuillez entrer le kilométrage de départ:");
+            if (kilometrage === null) return; // L'utilisateur a annulé
+
+            $.ajax({
+                url: '/home/commencer-intervention/' + interventionId + '/',
+                type: 'POST', // Assurez-vous que c'est bien POST
+                data: {
+                    kilometrage: kilometrage,
+                    csrfmiddlewaretoken: getCookie('csrftoken')
+                },
+                headers: {'X-CSRFToken': getCookie('csrftoken')},
+                success: function (response) {
+                    if (response.success) {
+                        alert('Intervention commencée avec succès.');
+                        refreshDoleanceTable();
+                        refreshPersonnelTable();
+                    } else {
+                        alert('Erreur lors du démarrage de l\'intervention: ' + response.message);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error("Erreur AJAX:", xhr.responseText);
+                    alert('Erreur lors de la communication avec le serveur: ' + error);
+                }
+            });
+        }
+
+        $(document).on('click', '.commencer-intervention', function () {
+            var interventionId = $(this).data('id');
+            commencerIntervention(interventionId);
+        });
+
+        function annulerIntervention(interventionId) {
+            if (!confirm("Êtes-vous sûr de vouloir annuler cette intervention ?")) return;
+
+            $.ajax({
+                url: '/home/intervention/' + interventionId + '/annuler/',
+                type: 'POST',
+                headers: {'X-CSRFToken': getCookie('csrftoken')},
+                success: function (response) {
+                    if (response.success) {
+                        alert('Intervention annulée avec succès.');
+                        location.reload(); // Ou mettez à jour l'interface utilisateur
+                    } else {
+                        alert('Erreur lors de l\'annulation de l\'intervention: ' + response.message);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error("Erreur AJAX:", xhr.responseText);
+                    alert('Erreur lors de la communication avec le serveur: ' + error);
+                }
+            });
+        }
+
+        // Assurez-vous que cet écouteur d'événements est correctement placé
+        $(document).on('click', '.annuler-intervention', function () {
+            var interventionId = $(this).data('id');
+            annulerIntervention(interventionId);
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const upperCaseInputs = document.querySelectorAll('input[type="text"], textarea');
+            upperCaseInputs.forEach(input => {
+                input.addEventListener('input', function () {
+                    this.value = this.value.toUpperCase();
+                });
+            });
+        });
+
         document.addEventListener('DOMContentLoaded', function () {
             var ctx = document.getElementById('interventionGauge').getContext('2d');
             var status = '{{ intervention.is_done|yesno:"Terminée,En cours" }}';
@@ -294,7 +391,17 @@
                                 alert('Intervention terminée avec succès');
                                 window.location.reload();
                             } else {
-                                alert(`Erreur lors de la terminaison de l'intervention: ' + data.message`);
+                                {#alert(`Erreur lors de la terminaison de l'intervention: ' + data.message`);#}
+                                let errorMessage = 'Erreur lors de la terminaison de l\'intervention: ';
+                                if (typeof data.message === 'object') {
+                                    // Si le message est un objet (probablement des erreurs de formulaire)
+                                    for (let key in data.message) {
+                                        errorMessage += `\n${key}: ${data.message[key]}`;
+                                    }
+                                } else {
+                                    errorMessage += data.message;
+                                }
+                                alert(errorMessage);
                             }
                         })
                         .catch(error => {
@@ -304,5 +411,20 @@
                 }
             }
         });
+
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
     </script>
-{% endblock %}
+{% endblock extra_js %}
