--- a/gmao/templates/gmao/create_doleance.html
+++ b/gmao/templates/gmao/create_doleance.html
@@ -100,76 +100,34 @@
     </div>
 {% endblock %}
 
-{% comment %}
 {% block extra_js %}
+    {{ block.super }}
     <script>
         $(document).ready(function () {
-            $('#id_client').change(function () {
-                const clientId = $(this).val();
-                updateStationsAndAppelants(clientId);
-                $('#id_element').html('<option value="">Sélectionnez d\'abord une station</option>').prop('disabled', true);
-            });
+            var maxLength = 200;  // Définissez la longueur maximale souhaitée
+            $('#id_panne_declarer').after('<div id="charNum">0/' + maxLength + ' caractères</div>');
 
+            $('#id_panne_declarer').on('input', function () {
+                var textlen = $(this).val().length;
+                $('#charNum').text(textlen + '/' + maxLength + ' caractères');
+
+                if (textlen > maxLength) {
+                    $('#charNum').css('color', 'red');
+                } else {
+                    $('#charNum').css('color', 'black');
+                }
+            });
         });
-
-        $('#id_station').change(function () {
-            let stationId = $(this).val();
-            if (stationId) {
-                updateElements(stationId);
-            } else {
-                $('#id_element').html('<option value="">Sélectionnez d\'abord une station</option>').prop('disabled', true);
-            }
-        });
-
-        function updateStationsAndAppelants(clientId) {
-            $.ajax({
-                url: "{% url 'gmao:load_stations' %}",
-                data: {'client': clientId},
-                success: function (data) {
-                    $('#id_station').html('<option value="">---------</option>');
-                    $.each(data, function (index, item) {
-                        $('#id_station').append($('<option></option>').val(item.id).html(item.libelle_station));
-                    });
-                }
-            });
-
-            $.ajax({
-                url: "{% url 'gmao:load_appelants' %}",
-                data: {'client': clientId},
-                success: function (data) {
-                    $('#id_appelant').html('<option value="">---------</option>');
-                    $.each(data, function (index, item) {
-                        $('#id_appelant').append($('<option></option>').val(item.id).html(item.nom_appelant));
-                    });
-                }
-            });
-        }
-
-        function updateElements(stationId) {
-            $.ajax({
-                url: "{% url 'gmao:load_elements' %}",
-                data: {'station': stationId},
-                success: function (data) {
-                    console.log("Received elements:", data);  // Pour le débogage
-                    const elementSelect = $('#id_element');
-                    elementSelect.empty();
-                    elementSelect.append($('<option></option>').val('').html('Sélectionnez un élément'));
-                    $.each(data, function (index, item) {
-                        elementSelect.append($('<option></option>').val(item[0]).html(item[1]));
-                    });
-                    elementSelect.prop('disabled', false);
-                },
-                error: function (xhr, status, error) {
-                    console.error("Error fetching elements:", error);
-                }
-            });
-        }
-
-
     </script>
-{% endblock %}{% endcomment %}
-{% block extra_js %}
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const upperCaseInputs = document.querySelectorAll('input[type="text"], textarea');
+            upperCaseInputs.forEach(input => {
+                input.addEventListener('input', function () {
+                    this.value = this.value.toUpperCase();
+                });
+            });
+        });
         $(document).ready(function () {
             console.log("Document ready");
 
@@ -242,33 +200,6 @@
             });
         }
 
-        {% comment %}function updateElements(stationId) {
-            $.ajax({
-                url: "{% url 'gmao:load_elements' %}",
-                data: {'station': stationId},
-                success: function (data) {
-                    var elementSelect = $('#id_element');
-                    elementSelect.empty();
-                    elementSelect.append('<option value="">Sélectionnez un élément</option>');
-
-                    for (var category in data) {
-                        if (data[category].length > 0) {
-                            var optgroup = $('<optgroup>').attr('label', category);
-                            $.each(data[category], function (index, item) {
-                                optgroup.append($('<option></option>').val(item[0]).html(item[1]));
-                            });
-                            elementSelect.append(optgroup);
-                        }
-                    }
-
-                    elementSelect.prop('disabled', false);
-                },
-                error: function (xhr, status, error) {
-                    console.error("Error fetching elements:", error);
-                }
-            });
-        }{% endcomment %}
-
         function updateElements(stationId) {
             $.ajax({
                 url: "{% url 'gmao:load_elements' %}",
@@ -300,4 +231,12 @@
             });
         }
     </script>
-{% endblock %}
+{% endblock extra_js %}
+{% block extra_css %}
+    <style>
+        #id_panne_declarer {
+            max-height: 100px; /* Ajustez cette valeur selon vos besoins */
+            resize: vertical; /* Permet à l'utilisateur de redimensionner verticalement si nécessaire */
+        }
+    </style>
+{% endblock extra_css %}
