--- a/gmao/templates/gmao/detail_doleance.html
+++ b/gmao/templates/gmao/detail_doleance.html
@@ -6,7 +6,7 @@
     <!-- Affichez ici les détails de la doléance -->
 
     {% if doleance.statut == 'ATP' %}
-        <a href="{% url 'declencher_intervention' doleance.id %}" class="btn btn-primary">Déclencher une
+        <a href="{% url 'gmao:declencher_intervention' doleance.id %}" class="btn btn-primary">Déclencher une
             intervention</a>
     {% endif %}
 {% endblock %}
