--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,8 @@
 {#        </nav>#}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="padding: 10px 20px;">
     <div class="col-sm">
-        <a class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center;">
+        <a href="{% url 'gmao:home' %}" class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center;">
+            
             {% block navbar-content %}
                 <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>&nbsp;&nbsp;Accès vérouillé
             {% endblock navbar-content %}
