--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -4,7 +4,7 @@
 
 {% block title %}G M A O{% endblock title %}
 
-{% block nav-btn %}
+{% comment %}{% block nav-btn %}
     <a href="{% url 'logout' %}" class="btn btn-outline-danger text-center text-light border-light btn-sm mx-2"
        id="btn-nav">
         Logout
@@ -16,8 +16,32 @@
            class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
     Liste des doléances
 </a>
+{% endblock nav-btn %}{% endcomment %}
+{% block nav-btn %}
+    <a href="{% url 'logout' %}" class="btn btn-outline-danger text-center text-light border-light btn-sm mx-2"
+       id="btn-nav">
+        Logout
+    </a>
+    {% if user.role == 'ADMIN' %}
+        <a href="{% url 'gmao:liste_interventions' %}"
+           class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
+            Liste des interventions
+        </a>
+        <a href="{% url 'gmao:toutes_les_doleances' %}"
+           class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
+            Liste des doléances
+        </a>
+        <a href="{% url 'gmao_teams:gestion_equipes' %}"
+           class="btn btn-outline-success text-center text-light border-light btn-sm mx-2" id="btn-nav">
+            Gestion des équipes
+        </a>
+    {% elif user_role == 'TECH' %}
+        <a href="{% url 'gmao:liste_interventions' %}"
+           class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
+            Liste des interventions
+        </a>
+    {% endif %}
 {% endblock nav-btn %}
-
 {% block navbar-content %}
     <i style="color: hsl(137, 90%, 50%);" class="fa-solid fa-user-alt"></i>
     &nbsp;&nbsp;&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}
@@ -40,109 +64,127 @@
 {% endblock extra_css %}
 
 {% block content %}
-
-    <div class="row mb-4">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                    <h5 class="mb-0">Doléances en cours</h5>
-                    <button type="button" class="btn btn-light btn-add" data-bs-toggle="modal"
-                            data-bs-target="#doleanceModal">
-                        <i class="fas fa-plus"></i>
-                    </button>
-                </div>
-                <div class="card-body">
-                    <div class="table-container">
-                        <table class="table table-striped table-bordered" id="demandeencours" style="width:100%">
-                            <!-- ... contenu du tableau des doléances ... -->
-                            <thead class="fw-bold text-center bg-primary text-light text-uppercase">
-                            <tr>
-                                <td></td>
-                                <td>NDI</td>
-                                <td>Date_trans</td>
-                                <td>Statut</td>
-                                <td>Station</td>
-                                <td>Éléments</td>
-                                <td>Panne</td>
-                                <td>Deadline</td>
-                                <td>Commentaires</td>
-                                <td>Actions</td>
-                            </tr>
-                            </thead>
-                        </table>
+    {% if user.role == 'ADMIN' %}
+        <div class="row mb-4">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">Doléances en cours</h5>
+                        <button type="button" class="btn btn-light btn-add" data-bs-toggle="modal"
+                                data-bs-target="#doleanceModal">
+                            <i class="fas fa-plus"></i>
+                        </button>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row mb-4">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-header bg-info text-white">
-                    <h5 class="mb-0">Interventions</h5>
-                </div>
-                <div class="card-body">
-                    <div class="table-container">
-                        <table class="table table-striped table-bordered" id="interventions" style="width:100%">
-                            <thead>
-                            <tr>
-                                <th>NDI</th>
-                                <th>Début prise en charge</th>
-                                <th>Début travail</th>
-                                <th>Fin travail</th>
-                                <th>Statut</th>
-                                <th>Actions</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for intervention in interventions %}
+                    <div class="card-body">
+                        <div class="table-container">
+                            <table class="table table-striped table-bordered" id="demandeencours" style="width:100%">
+                                <!-- ... contenu du tableau des doléances ... -->
+                                <thead class="fw-bold text-center bg-primary text-light text-uppercase">
                                 <tr>
-                                    <td>{{ intervention.doleance.ndi }}</td>
-                                    <td>{{ intervention.top_depart }}</td>
-                                    <td>{{ intervention.top_debut }}</td>
-                                    <td>{{ intervention.top_terminer }}</td>
-                                    <td>
-                                        {% if intervention.is_done %}
-                                            Terminée
-                                        {% elif intervention.is_half_done %}
-                                            En cours
-                                        {% else %}
-                                            Non commencée
-                                        {% endif %}
-                                    </td>
-                                    <td>
-                                        <a href="{% url 'gmao:detail_intervention' intervention.id %}"
-                                           class="btn btn-sm btn-primary">Éditer</a>
-                                    </td>
+                                    <td></td>
+                                    <td>NDI</td>
+                                    <td>Date_trans</td>
+                                    <td>Statut</td>
+                                    <td>Station</td>
+                                    <td>Éléments</td>
+                                    <td>Panne</td>
+                                    <td>Deadline</td>
+                                    <td>Commentaires</td>
+                                    <td>Actions</td>
                                 </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
+                                </thead>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-header bg-success text-white">
-                    <h5 class="mb-0">Personnels</h5>
-                </div>
-                <div class="card-body">
-                    <div class="table-container">
-                        <table class="table table-striped table-bordered" id="personnel" style="width:100%">
-                            <!-- ... contenu du tableau du personnel ... -->
-                        </table>
+        <div class="row mb-4">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-info text-white">
+                        <h5 class="mb-0">Interventions</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-container">
+                            <table class="table table-striped table-bordered" id="interventions" style="width:100%">
+                                <thead>
+                                <tr>
+                                    <th>NDI</th>
+                                    <th>Début prise en charge</th>
+                                    <th>Début travail</th>
+                                    <th>Fin travail</th>
+                                    <th>Statut</th>
+                                    <th>Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for intervention in interventions %}
+                                    <tr>
+                                        <td>{{ intervention.doleance.ndi }}</td>
+                                        <td>{{ intervention.top_depart }}</td>
+                                        <td>{{ intervention.top_debut }}</td>
+                                        <td>{{ intervention.top_terminer }}</td>
+                                        <td>
+                                            {% if intervention.is_done %}
+                                                Terminée
+                                            {% elif intervention.is_half_done %}
+                                                En cours
+                                            {% else %}
+                                                Non commencée
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            <a href="{% url 'gmao:detail_intervention' intervention.id %}"
+                                               class="btn btn-sm btn-primary">Éditer</a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Modal pour l'ajout de doléance -->
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-success text-white">
+                        <h5 class="mb-0">Personnels</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-container">
+                            <table class="table table-striped table-bordered" id="personnel" style="width:100%">
+                                <!-- ... contenu du tableau du personnel ... -->
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    {% else %}
+        <div class="row mb-4">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-info text-white">
+                        <h5 class="mb-0">Mon portefeuille de doléances</h5>
+                    </div>
+                    <div class="card-body">
+                        <div id="portfolioContainer">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
+
+
     <!-- Modal pour l'ajout de doléance -->
     <div class="modal fade" id="doleanceModal" tabindex="-1" role="dialog" aria-labelledby="doleanceModalLabel"
          aria-hidden="true">
@@ -169,6 +211,10 @@
 
 {% block extra_js %}
     <script src="{% static 'gmao/js/home.js' %}"></script>
+    <script src="{% static 'gmao/js/teams.js' %}"></script>
+    <script>
+        const USER_ROLE = "{{ user_role }}";
+    </script>
     {% if user.role == 'ADMIN' %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
         <script>
