--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -15,6 +15,7 @@
     &nbsp;&nbsp;&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}
 {% endblock navbar-content %}
 
+{% comment %}
 {% block content %}
     <h2>Liste des interventions</h2>
     <table class="table table-striped table-bordered">
@@ -63,4 +64,99 @@
         {% endfor %}
         </tbody>
     </table>
-{% endblock %}
+{% endblock %}{% endcomment %}
+{% extends 'base.html' %}
+
+{% block content %}
+    <h2 class="mb-4">Liste des interventions</h2>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th>NDI</th>
+                <th>Début prise en charge</th>
+                <th>Début travail</th>
+                <th>Fin travail</th>
+                <th>Statut</th>
+                <th>Techniciens</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for intervention in interventions %}
+                <tr>
+                    <td data-label="NDI">{{ intervention.doleance.ndi }}</td>
+                    <td data-label="Début prise en charge">{{ intervention.top_depart }}</td>
+                    <td data-label="Début travail">{{ intervention.top_debut }}</td>
+                    <td data-label="Fin travail">{{ intervention.top_terminer }}</td>
+                    <td data-label="Statut">
+                        {% if intervention.is_done %}
+                            Terminée
+                        {% elif intervention.is_half_done %}
+                            En cours
+                        {% else %}
+                            Non commencée
+                        {% endif %}
+                    </td>
+                    <td data-label="Techniciens">
+                        {% for ip in intervention.interventionpersonnel_set.all %}
+                            {{ ip.personnel.nom_personnel }}
+                            {{ ip.personnel.prenom_personnel }}{% if not forloop.last %}, {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td data-label="Actions">
+                        <a href="{% url 'gmao:detail_intervention' intervention.id %}"
+                           class="btn btn-sm btn-primary">Éditer</a>
+                    </td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="7" class="text-center">Aucune intervention trouvée pour aujourd'hui.</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endblock  content %}
+{% block extra_css %}
+    <style>
+        @media screen and (max-width: 767px) {
+            .table-responsive table,
+            .table-responsive thead,
+            .table-responsive tbody,
+            .table-responsive th,
+            .table-responsive td,
+            .table-responsive tr {
+                display: block;
+            }
+
+            .table-responsive thead tr {
+                position: absolute;
+                top: -9999px;
+                left: -9999px;
+            }
+
+            .table-responsive tr {
+                border: 1px solid #ccc;
+                margin-bottom: 10px;
+            }
+
+            .table-responsive td {
+                border: none;
+                border-bottom: 1px solid #eee;
+                position: relative;
+                padding-left: 50%;
+            }
+
+            .table-responsive td:before {
+                content: attr(data-label);
+                position: absolute;
+                left: 6px;
+                width: 45%;
+                padding-right: 10px;
+                white-space: nowrap;
+                font-weight: bold;
+            }
+        }
+    </style>
+{% endblock extra_css %}
