--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -92,7 +92,7 @@
                         {% if intervention.is_done %}
                             Terminée
                         {% elif intervention.is_half_done %}
-                            En cours
+                            En attente FI {{ intervention.numero_fiche }}
                         {% else %}
                             Non commencée
                         {% endif %}
@@ -107,17 +107,6 @@
                             {% endfor %}
                         </ul>
                     </td>
-                    {% comment %}<td>
-                        <ul>
-                            {% for technicien in intervention.techniciens %}
-                                <li>
-                                    {{ technicien.nom_personnel }}
-                                    {{ technicien.prenom_personnel }}{% if not forloop.last %}, {% endif %}
-                                </li>
-
-                            {% endfor %}
-                        </ul>
-                    </td>{% endcomment %}
                     <td data-label="Actions">
                         <a href="{% url 'gmao:detail_intervention' intervention.id %}"
                            class="btn btn-sm btn-primary">Éditer</a>
@@ -132,49 +121,6 @@
         </table>
     </div>
 {% endblock content %}
-{% comment %}
-{% block extra_css %}
-    <style>
-        @media screen and (max-width: 767px) {
-            .table-responsive table,
-            .table-responsive thead,
-            .table-responsive tbody,
-            .table-responsive th,
-            .table-responsive td,
-            .table-responsive tr {
-                display: block;
-            }
-
-            .table-responsive thead tr {
-                position: absolute;
-                top: -9999px;
-                left: -9999px;
-            }
-
-            .table-responsive tr {
-                border: 1px solid #ccc;
-                margin-bottom: 10px;
-            }
-
-            .table-responsive td {
-                border: none;
-                border-bottom: 1px solid #eee;
-                position: relative;
-                padding-left: 50%;
-            }
-
-            .table-responsive td:before {
-                content: attr(data-label);
-                position: absolute;
-                left: 6px;
-                width: 45%;
-                padding-right: 10px;
-                white-space: nowrap;
-                font-weight: bold;
-            }
-        }
-    </style>
-{% endblock extra_css %}{% endcomment %}
 {% block extra_css %}
     <style>
         @media screen and (max-width: 767px) {
