--- a/gmao_teams/templates/gmao_teams/gestion_equipes.html
+++ b/gmao_teams/templates/gmao_teams/gestion_equipes.html
@@ -208,8 +208,9 @@
                         <div class="col-md-6">
                             <h3>Doléances non attribuées</h3>
                             <div class="input-group mb-3">
-                                <input type="text" id="searchDoleances" class="form-control"
-                                       placeholder="Rechercher une doléance...">
+                                <label for="searchDoleances"></label><input type="text" id="searchDoleances"
+                                                                            class="form-control"
+                                                                            placeholder="Rechercher une doléance...">
                             </div>
                             <ul id="listeDoléancesNonAttribuées" class="list-group"
                                 style="max-height: 300px; overflow-y: auto;"></ul>
